force-app/main/default/objects/pse__Expense__c/pse__Expense__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ExpenseHelp</customHelpPage>
    <description>Sometimes called an expense line or row. Represents a record of an expense incurred by a resource assigned to a project or opportunity. Expenses are grouped into an expense report for submission and approval, and may be subject to limits or rates depending on type (for example, Lodging, Auto Mileage). An expense may be billable or non-billable. Unless marked otherwise, all expenses contain a reimbursable amount for the resource. Expenses have a lookup relationship to expense reports.</description>
    <label>Expense</label>
    <nameField>
        <displayFormat>EXP-{0}</displayFormat>
        <label>Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>