force-app/main/default/objects/pse__Expense__c/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>