force-app/main/default/objects/pse__Expense__c/fields/pse__Exchange_Rate_Billing_Currency__c.field-meta.xml
<CustomField>
    <fullName>pse__Exchange_Rate_Billing_Currency__c</fullName>
    <label>Exchange Rate (Billing Currency)</label>
    <precision>12</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>