force-app/main/default/objects/pse__Expense__c/fields/pse__Mobile_Expense_Reference__c.field-meta.xml
<CustomField>
    <fullName>pse__Mobile_Expense_Reference__c</fullName>
    <description>External Id reference for Expense Offline Mobile app</description>
    <externalId>true</externalId>
    <label>Mobile Expense Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>