force-app/main/default/objects/pse__Expense__c/fields/Reimbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Status__c</fullName>
    <description>Used to display the Reimbursement Status from NetSuite.</description>
    <label>Reimbursement Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not-Synced</fullName>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Payment Not Requested</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>