force-app/main/default/objects/pse__Expense__c/fields/Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>Resource_Id__c</fullName>
    <formula>pse__Resource__c</formula>
    <label>Resource Id</label>
    <type>Text</type>
</CustomField>