force-app/main/default/objects/pse__Expense__c/validationRules/pse__Expense_Asgnmt_Project_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Expense_Asgnmt_Project_Mismatch</fullName>
    <active>false</active>
    <description>Assignment Project must match Expense Project.</description>
    <errorConditionFormula>AND(NOT(ISNULL(pse__Assignment__c)),(pse__Assignment__c &lt;&gt; &apos;&apos;),NOT(ISNULL(pse__Assignment__r.pse__Project__c)),(pse__Assignment__r.pse__Project__c &lt;&gt; &apos;&apos;),(pse__Project__c &lt;&gt; pse__Assignment__r.pse__Project__c))</errorConditionFormula>
    <errorDisplayField>pse__Assignment__c</errorDisplayField>
    <errorMessage>Assignment Project must match Expense Project.</errorMessage>
</ValidationRule>