force-app/main/default/objects/pse__Expense__c/validationRules/pse__Expense_Asgnmt_Resource_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Expense_Asgnmt_Resource_Mismatch</fullName>
    <active>false</active>
    <description>Assignment Resource must match Expense Resource.</description>
    <errorConditionFormula>AND(NOT(ISNULL(pse__Assignment__c)),(pse__Assignment__c &lt;&gt; &apos;&apos;),NOT(ISNULL(pse__Assignment__r.pse__Resource__c)),(pse__Assignment__r.pse__Resource__c &lt;&gt; &apos;&apos;),(pse__Resource__c &lt;&gt; pse__Assignment__r.pse__Resource__c))</errorConditionFormula>
    <errorDisplayField>pse__Assignment__c</errorDisplayField>
    <errorMessage>Assignment Resource must match Expense Resource.</errorMessage>
</ValidationRule>