force-app/main/default/objects/pse__Expense__c/validationRules/pse__Expense_Line_Resource_is_Constant.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Expense_Line_Resource_is_Constant</fullName>
    <active>false</active>
    <description>A Expense Line&apos;s Resource field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</description>
    <errorConditionFormula>OR(ISNULL(pse__Resource__c),(pse__Resource__c=&apos;&apos;),AND(ISCHANGED(pse__Resource__c),OR(NOT(pse__Admin_Global_Edit__c),ISNULL(pse__Audit_Notes__c),ISBLANK(TRIM(pse__Audit_Notes__c)))))</errorConditionFormula>
    <errorDisplayField>pse__Resource__c</errorDisplayField>
    <errorMessage>A Expense Line&apos;s Resource field value may not be blank and may not be updated once set (unless Admin Global Edit is checked, Audit Notes are provided, and Actuals Calculation Mode is Scheduled).</errorMessage>
</ValidationRule>