force-app/main/default/objects/pse__Expense__c/validationRules/pse__Res_Defined_Rate_Diff_Currencies_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Res_Defined_Rate_Diff_Currencies_Only</fullName>
    <active>false</active>
    <description>Resource-defined Exchange Rate can only be set if Incurred and Resource currencies are different.  If the currencies are the same, a relative rate of 1.0 is implied.</description>
    <errorConditionFormula>AND(NOT(OR(ISNULL(pse__Exchange_Rate_Resource_Defined__c),(pse__Exchange_Rate_Resource_Defined__c=1.0))),(TEXT(CurrencyIsoCode)=TEXT(pse__Resource__r.CurrencyIsoCode)))</errorConditionFormula>
    <errorDisplayField>pse__Exchange_Rate_Resource_Defined__c</errorDisplayField>
    <errorMessage>Resource-defined Exchange Rate can only be set if Incurred and Resource currencies are different.  If the currencies are the same, a relative rate of 1.0 is implied.</errorMessage>
</ValidationRule>