force-app/main/default/objects/pse__Expense__c/validationRules/pse__Res_Defined_Rate_may_not_be_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Res_Defined_Rate_may_not_be_Negative</fullName>
    <active>false</active>
    <description>Resource-defined Exchange Rate must either be greater than 0.0 (zero) or null/empty.</description>
    <errorConditionFormula>AND(NOT(ISNULL(pse__Exchange_Rate_Resource_Defined__c)),(pse__Exchange_Rate_Resource_Defined__c&lt;=0.0))</errorConditionFormula>
    <errorDisplayField>pse__Exchange_Rate_Resource_Defined__c</errorDisplayField>
    <errorMessage>Resource-defined Exchange Rate must either be greater than 0.0 (zero) or null/empty.</errorMessage>
</ValidationRule>